# EmbASI

./: .gitignore  CallbackGenerators.py  LICENSE  MIT license  README.md  asi.py  atoms_embedding.py  atoms_embedding_asi.py  basis_info.py  emb_calculator.py  embedding.py  parallel_utils.py  pyproject.toml
ASI_Embedding/: atoms_embedding_asi.py  basis_info.py  embedding.py
asiembedding/: __init__.py  atoms_embedding_asi.py  basis_info.py  embedding.py  parallel_utils.py
docs/: ASI_Embedding.rst  conf.py  embasi.rst  explainer.rst  index.rst  installation.rst  modules.rst  tutorials.rst
docs/_build/doctrees/: ASI_Embedding.doctree  codeintegration.doctree  environment.pickle  explainer.doctree  index.doctree  installation.doctree  modules.doctree  tutorials.doctree
docs/_build/html/: .buildinfo  ASI_Embedding.html  codeintegration.html  explainer.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
embasi/: .nfs00000000003e3f690000001e  asi_default_callbacks.py  atoms_embedding_asi.py  basis_info.py  chemsh_interface.py  embasicalc.py  embedding.py  geom_utils.py  parallel_utils.py  roothan_hall_eigensolver.py  roothan_hall_eigensolver_scalapack.py  silicate_example.py  write_aims.py
embasi/workflows/: extrapolation.py
examples/FHIaims/BEA_embed/: bea.py  truncation_example.py  zeolite.xyz
examples/FHIaims/basis_extrapolation/: extrapolation_example.py
examples/FHIaims/basis_truncation/: decanol.xyz  nonanol.xyz  truncation_example.py
examples/FHIaims/frozendensity_embedding/: dimer_h2o_fdet.py
examples/FHIaims/projection_embedding/: dimer_meoh_example.py  dimer_meoh_example_parallel.py  (+1 more)
examples/eigensolvers/: test_pdsyevx.py
src/: basis_info.py
test/asi_test/: #test.py#  control.in  geometry.in  run.sh  run.sh~  test.py  test.py~
test/coding_test/: Untitled.ipynb  aims.out  control.in  control.in~  embedding.py  embedding.py~  geometry.in  parameters.ase
test/embed_test/: DM_9.txt  aims.out  control.in  geometry.in  run.sh  test.py
test/truncation_test/: truncation.py
tests/: README  fhiaims_extrapolate_test_generator.py  fhiaims_meoh_test_generator.py  requirements.txt
tests/basic_tests/: test_cdll_library_load.py
tests/parallel_solvers/: test_pdsyevx.pynull
(+53 files in other folders)
