[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Embasi"
version = "0.0.1"
authors = [
        {name="Gabriel Bramley", email="BramleyG@cardiff.ac.uk"},
]
description = "A generalised workflow for QM/QM Embedding"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
            "Programming Language :: Python :: 3",
            "License :: OSI Approved :: MIT License",
            "Operatoring System :: OS Independent",
]
dependencies = [
             "ase==3.22.1",
]


[project.urls]
Homepage = "https://github.com/GabrielBram/ASI_Embedding"
Issues = "https://github.com/GabrielBram/ASI_Embedding/issues"